Fixing spacing above SidebarBackToLink

--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -33,7 +33,7 @@
 */
 
 .backToLinkWrapper {
-  margin-bottom: 8px;
+  margin-top: 8px;
 }
 
 .filterInputWrapper {
